# ChangeLog for app-vim/latexsuite
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/ChangeLog,v 1.18 2006/09/09 14:58:48 slarti Exp $

*latexsuite-1.5.20060325 (09 Sep 2006)

  09 Sep 2006; Tom Martin <slarti@gentoo.org>
  latexsuite-1.5.20060124.ebuild, +latexsuite-1.5.20060325.ebuild:
  Bump to 20060325, resolving bug #133199; mark 20060124 stable on amd64 for
  bug #132536.

*latexsuite-1.5.20060124 (24 Feb 2006)

  24 Feb 2006; Ciaran McCreesh <ciaranm@gentoo.org>
  +latexsuite-1.5.20060124.ebuild:
  New version, thanks to Jorges in bug #122326.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> latexsuite-1.5.ebuild:
  Stable on ppc.

  18 Feb 2005; Tom Martin <slarti@gentoo.org> latexsuite-1.5.ebuild,
  latexsuite-1.5_rc1.ebuild:
  1.5 amd64 stable, 1.5_rc1 amd64 testing.

  30 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> latexsuite-1.5.ebuild:
  Stable on alpha.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> latexsuite-1.5.ebuild:
  x86 stable

  06 Sep 2004; Ciaran McCreesh <ciaranm@gentoo.org> latexsuite-1.5.ebuild:
  Display plugin help text, bug #62559

  27 Jul 2004; Ciaran McCreesh <ciaranm@gentoo.org> latexsuite-1.5.ebuild,
  latexsuite-1.5_rc1.ebuild:
  Fix einfo for bug #58377

  20 Jun 2004; Ciaran McCreesh <ciaranm@gentoo.org> latexsuite-1.5.ebuild:
  Stable on sparc

  30 May 2004; Danny van Dyk <kugelfang@gentoo.org> latexsuite-1.5.ebuild:
  Marked ~amd64.

*latexsuite-1.5 (23 May 2004)

  23 May 2004; Ciaran McCreesh <ciaranm@gentoo.org> +latexsuite-1.5.ebuild:
  Version bump, bug #51820

  18 May 2004; Mamoru KOMACHI <usata@gentoo.org> latexsuite-1.5_rc1.ebuild:
  Changed app-text/tetex to virtual/tetex.

  16 Mar 2004; David Holm <dholm@gentoo.org> latexsuite-1.5_rc1.ebuild:
  Added to ~ppc.

  15 Mar 2004; Ciaran McCreesh <ciaranm@gentoo.org> latexsuite-1.5_rc1.ebuild:
  Stable on sparc
