@@ -5,26 +5,26 @@ DIST latexSuite-1.5-rc1.tar.gz 188634
 DIST latexSuite-1.5.tar.gz 189542 RMD160 968aec5498164ba7652956ef5625b6f67842abf8 SHA1 caecad2e1c6a52d2370cdcd08695f116648726a1 SHA256 231d678ec9194e1f0dc9c997d227cf507a0bce21aaed9bb2c9a9f2981e4d6715
 DIST latexSuite20060124.tar.gz 332811 RMD160 e3cfded382ac9d862265570acb6b5b2865cb1bd8 SHA1 bf4fbbf02287861c6502f123ae9fd99fc59d82a8 SHA256 8e638481e0918c871efc3386bf6eddf7d27ae3cc725f081f83373325b8aca0cc
 DIST latexSuite20060325.tar.gz 217436 RMD160 158534e9686d5732fe2d91128add3bfbdb3d0d1a SHA1 e1bd2982f55f001e4ecf8c79c00bf5fdc521a650 SHA256 bb7d5e427f8026fe391a7bea698480b59f36bcc4497c3b225ecce0e4921e4584
-EBUILD latexsuite-1.5.20060124.ebuild 1057 RMD160 f9eba094774b0b5f9ec3e210d07b9b526f83a9d1 SHA1 747c8de010a75c10e3a780a6253f4f60f2e97464 SHA256 7f9bb5fa43515974389415356854677e41600b1545489db565fb5e085b52b00a
-MD5 322dd7b5c6a3d104a0e6709e9b98668d latexsuite-1.5.20060124.ebuild 1057
-RMD160 f9eba094774b0b5f9ec3e210d07b9b526f83a9d1 latexsuite-1.5.20060124.ebuild 1057
-SHA256 7f9bb5fa43515974389415356854677e41600b1545489db565fb5e085b52b00a latexsuite-1.5.20060124.ebuild 1057
+EBUILD latexsuite-1.5.20060124.ebuild 1055 RMD160 88c90b078b848c8aba8cc777b07b77b32afecd8c SHA1 7b25b2baaa98c47bcd6945a05d7fea0fa765f037 SHA256 b0a27154b566d16b5f2d410a52c9d456c631a0aa0f954ef256018e3e7ecc07f5
+MD5 2086d26a0e9e15e5d80465924f6abaef latexsuite-1.5.20060124.ebuild 1055
+RMD160 88c90b078b848c8aba8cc777b07b77b32afecd8c latexsuite-1.5.20060124.ebuild 1055
+SHA256 b0a27154b566d16b5f2d410a52c9d456c631a0aa0f954ef256018e3e7ecc07f5 latexsuite-1.5.20060124.ebuild 1055
 EBUILD latexsuite-1.5.20060325.ebuild 1058 RMD160 5c49f9abdcac1f0e64340a4faf0d73e43af3c3fe SHA1 bf0905f5899d97ad7b1e756168190efa35f5224b SHA256 937b160b06ff135a3a88c1222e229afd1adff8e1473eca880ab46050249fbda5
 MD5 d84b76d133cd5bc6e4404df77e813951 latexsuite-1.5.20060325.ebuild 1058
 RMD160 5c49f9abdcac1f0e64340a4faf0d73e43af3c3fe latexsuite-1.5.20060325.ebuild 1058
 SHA256 937b160b06ff135a3a88c1222e229afd1adff8e1473eca880ab46050249fbda5 latexsuite-1.5.20060325.ebuild 1058
-EBUILD latexsuite-1.5.ebuild 1163 RMD160 f0708da186bba11ef3231369392646c50509d7c0 SHA1 861a8e45b2e9e5528d5ee7bc84a6fcd89bb1116d SHA256 e769d630b5fe7a0398d7a1b4c4032f81838af4022939b1524c7167598b431270
-MD5 5d3bb431e4b8c34c6de66637c85bef0b latexsuite-1.5.ebuild 1163
-RMD160 f0708da186bba11ef3231369392646c50509d7c0 latexsuite-1.5.ebuild 1163
-SHA256 e769d630b5fe7a0398d7a1b4c4032f81838af4022939b1524c7167598b431270 latexsuite-1.5.ebuild 1163
-EBUILD latexsuite-1.5_rc1.ebuild 1187 RMD160 89765abb810c0b4e1c828b1daccc9ffe499dffda SHA1 ede0f32bb77d63eddbc6e88805306fdfd9689782 SHA256 97297f891c0c31fe55a01bf0f937ec81e5d806d728db15ff4e48d9401fcba9e1
-MD5 4fe5a801ec3b3984e62ff0c6c25f9eca latexsuite-1.5_rc1.ebuild 1187
-RMD160 89765abb810c0b4e1c828b1daccc9ffe499dffda latexsuite-1.5_rc1.ebuild 1187
-SHA256 97297f891c0c31fe55a01bf0f937ec81e5d806d728db15ff4e48d9401fcba9e1 latexsuite-1.5_rc1.ebuild 1187
-MISC ChangeLog 2252 RMD160 57a3ba03f07d3427bf58d185fa459f9f93aff3df SHA1 4164586faa3a46bdc605e13b3cfba62173d27be4 SHA256 62d1dcf51e4b631dd65f0811f6d8bdbe439b72f1576a0d2eb1c1bc8fcf392db5
-MD5 b737c41e5d566cc2360c83a7d9a5233a ChangeLog 2252
-RMD160 57a3ba03f07d3427bf58d185fa459f9f93aff3df ChangeLog 2252
-SHA256 62d1dcf51e4b631dd65f0811f6d8bdbe439b72f1576a0d2eb1c1bc8fcf392db5 ChangeLog 2252
+EBUILD latexsuite-1.5.ebuild 1160 RMD160 1797e20f98535600d05d438d9849a6bd6abd8b0e SHA1 6265407bf6c93918b43b56e8e3655905f1a5b470 SHA256 75fdfb4f84ef5ef4eb6c6d1fdc68b5ceb8ef91d46de8099fb80af04aac0ade84
+MD5 bc5c405153ea3811efda430dcbcbf2ea latexsuite-1.5.ebuild 1160
+RMD160 1797e20f98535600d05d438d9849a6bd6abd8b0e latexsuite-1.5.ebuild 1160
+SHA256 75fdfb4f84ef5ef4eb6c6d1fdc68b5ceb8ef91d46de8099fb80af04aac0ade84 latexsuite-1.5.ebuild 1160
+EBUILD latexsuite-1.5_rc1.ebuild 1184 RMD160 0b7ddff03184c59e4c72386d3c2ce51f56608d5c SHA1 f28e7ad31b5ac5a6a93943475361a364f3dec111 SHA256 5f68b3123f63be565895594b45712098702268b205808cdbf708ef5f51981b3e
+MD5 45c7640c2b382e9ad76a1da96526c6a2 latexsuite-1.5_rc1.ebuild 1184
+RMD160 0b7ddff03184c59e4c72386d3c2ce51f56608d5c latexsuite-1.5_rc1.ebuild 1184
+SHA256 5f68b3123f63be565895594b45712098702268b205808cdbf708ef5f51981b3e latexsuite-1.5_rc1.ebuild 1184
+MISC ChangeLog 2376 RMD160 86275beea07da149f009d64a0bf6984836b5bab2 SHA1 6ed5ea2131ff5b8d4403293554ed4b1fca92a3e5 SHA256 4256bf76aa631cfff140d729f7a51cc7f781daa2b0359438caeb3fbd4af57345
+MD5 818098f76fd43c6e1ad68a95d320a2f2 ChangeLog 2376
+RMD160 86275beea07da149f009d64a0bf6984836b5bab2 ChangeLog 2376
+SHA256 4256bf76aa631cfff140d729f7a51cc7f781daa2b0359438caeb3fbd4af57345 ChangeLog 2376
 MISC metadata.xml 398 RMD160 d8fd6d829199989a575d34508ac5e3ac1acd8790 SHA1 17baaa2b4f40027f9c1ea7291a718c6f56df81dc SHA256 9fe362639fddb132ef829f83c73f52d01c59adadc616a658e241cab1004e3f98
 MD5 9702054cb203cec48c4a64de799f4287 metadata.xml 398
 RMD160 d8fd6d829199989a575d34508ac5e3ac1acd8790 metadata.xml 398
@@ -42,9 +42,9 @@ MD5 c8849f310e180a58ea74d06c7180870d files/digest-latexsuite-1.5_rc1 70
 RMD160 47878f36b6a98814ca870ba294db64b404677db1 files/digest-latexsuite-1.5_rc1 70
 SHA256 bb87b8f3a711f5ff9b72407bb732ba1753b90b9454eeb8e293bff5ca9dad76b1 files/digest-latexsuite-1.5_rc1 70
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.5 (GNU/Linux)
+Version: GnuPG v1.2.4 (GNU/Linux)
 
-iD8DBQFFAta8CHk4+ZoBpvsRAi5yAKCT3Ub4lgJ1uvdA+ADbr2PFa5cF1ACfXEv3
-ibNiJTTBYZRsxehWMzCqRS8=
-=rTuH
+iD8DBQFFBLZK/NoSW7FuNV8RAkKqAJ0TXv/RbJ9bO7BDhI2wgY/T1pAvdwCeK2Lc
+1S0qYJsqNjXUyh/f1Zrj1IE=
+=qY5O
 -----END PGP SIGNATURE-----
