@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/latexsuite-1.5.ebuild,v 1.14 2005/07/09 18:49:29 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/latexsuite-1.5.ebuild,v 1.15 2006/09/11 01:08:57 wormo Exp $
 
 inherit vim-plugin
 
