@@ -1,6 +1,10 @@
 # ChangeLog for app-vim/latexsuite
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/ChangeLog,v 1.18 2006/09/09 14:58:48 slarti Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/ChangeLog,v 1.19 2006/09/11 01:08:57 wormo Exp $
+
+  10 Sep 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
+  latexsuite-1.5.20060124.ebuild:
+  stable on ppc (Bug #132536)
 
 *latexsuite-1.5.20060325 (09 Sep 2006)
 
